# google-map-scraper

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/: __init__.py
src/cmd/server/: __init__.py
src/config/: __init__.py  api_config.py  browser_config.py  config.py  database_config.py  google_maps_config.py  h3_config.py  logging_config.py  redis_config.py  scraper_config.py
src/internal/: __init__.py
src/internal/constants/: __init__.py
src/internal/model/dto/: __init__.py
src/internal/model/entity/: __init__.py  base.py  gmaps_jobs.py  gmaps_results.py
src/internal/store/database/: __init__.py  database.py
src/internal/store/google_map_result_store/: __init__.py
src/internal/store/google_map_store/: __init__.py
src/internal/usecase/: __init__.py
src/internal/usecase/gmapscraper/: __init__.py
tests/: conftest.py
tests/integration/: test_database.py
tests/unit/: test_config.py  test_models.py
